--- a/mysql-slave.yml
+++ b/mysql-slave.yml
@@ -67,7 +67,7 @@ spec:
          - name: MYSQL_MASTER_SERVICE_HOST
            value: svc-mysql
          - name: MYSQL_DATABASE
-           value: AspNetCoreApiStarter
+           value: AspNetCoreWebApi
          - name: MYSQL_DATABASE_1
            value: library
         ports:
