--- a/mysql-initdb.yml
+++ b/mysql-initdb.yml
@@ -4,8 +4,8 @@ metadata:
   name: mysql-initdb
   namespace: default
 data:
-  AspNetCoreApiStarter.sql: "-- MySQL dump 10.13  Distrib 8.0.16, for Linux
-    (x86_64)\n--\n-- Host: localhost    Database: AspNetCoreApiStarter\n-- ------------------------------------------------------\n--
+  AspNetCoreWebApi.sql: "-- MySQL dump 10.13  Distrib 8.0.16, for Linux
+    (x86_64)\n--\n-- Host: localhost    Database: AspNetCoreWebApi\n-- ------------------------------------------------------\n--
     Server version\t8.0.16\n\n/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT
     */;\n/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */;\n/*!40101
     SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;\n SET NAMES utf8mb4 ;\n/*!40103
