--- a/mysql-master.yml
+++ b/mysql-master.yml
@@ -65,7 +65,7 @@ spec:
                name: mysql-secret
                key: mysql-password
          - name: MYSQL_DATABASE
-           value: AspNetCoreApiStarter
+           value: AspNetCoreWebApi
          - name: MYSQL_DATABASE_1
            value: library
         ports:
