--- a/ingress.yml
+++ b/ingress.yml
@@ -4,7 +4,7 @@ metadata:
   name: ingress
   namespace: default
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+#    kubernetes.io/ingress.class: "nginx" - Not needed when ingressClassName is used below
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 #    nginx.ingress.kubernetes.io/app-root: /
@@ -14,45 +14,43 @@ metadata:
 #    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
 #    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
 #    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
-#    certmanager.k8s.io/issuer: "iconverse-letsencrypt"
-#    certmanager.k8s.io/acme-challenge-type: http01
-#    kubernetes.io/tls-acme: 'true'
+    cert-manager.io/cluster-issuer: "letsencrypt"
+    cert-manager.io/acme-challenge-type: http01
+    kubernetes.io/tls-acme: 'true'
   labels:
     app: ingress
 spec:
-#  tls:
-#  - hosts:
-#    - mydomain.io
-#    secretName: iconverse-k8s.tls
+  ingressClassName: nginx
+  tls:
+  - hosts:
+    - khteh.github.io
+    secretName: tls-secret
   rules:  
-  - host:
+  - host: khteh.github.io
     http: 
       paths:
       - pathType: Prefix
         path: /aspnetcorewebapi(/|$)(.*)
+#        path: /aspnetcorewebapi
         backend:
           service:
             name: svc-aspnetcorewebapi
             port:
-              number: 5000
-      - pathType: Prefix
-        path: //aspnetcorewebapi(/|$)(.*)
-        backend:
-          service:
-            name: svc-aspnetcorewebapi
-            port:
-              number: 5000
-      - pathType: Prefix
-        path: /kibana(/|$)(.*)
-        backend:
-          service:
-            name: svc-kibana
-            port:
-              number: 5601
-      - pathType: Prefix
-        path: //kibana(/|$)(.*)
-        backend:
-          service:
-            name: svc-kibana
-            port:
-              number: 5601
+              number: 443
+#  - host:
+#    http: 
+#      paths:
+#      - pathType: Prefix
+#        path: /pythonrestapi(/|$)(.*)
+#        backend:
+#          service:
+#            name: svc-pythonrestapi
+#            port:
+#              number: 443
+#      - pathType: Prefix
+#        path: /kibana(/|$)(.*)
+#        backend:
+#          service:
+#            name: svc-kibana
+#            port:
+#              number: 5601
