--- a/ingress.yml
+++ b/ingress.yml
@@ -4,9 +4,10 @@ metadata:
   name: ingress
   namespace: default
   annotations:
-#    kubernetes.io/ingress.class: "nginx" - Not needed when ingressClassName is used below
+#    kubernetes.io/ingress.class: nginx - Not needed when ingressClassName is used below
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 #    nginx.ingress.kubernetes.io/app-root: /
 #    nginx.ingress.kubernetes.io/affinity: "cookie"
 #    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-cookie"
@@ -14,24 +15,23 @@ metadata:
 #    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
 #    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
 #    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
-    cert-manager.io/cluster-issuer: "letsencrypt"
-    cert-manager.io/acme-challenge-type: http01
-    kubernetes.io/tls-acme: 'true'
+#    cert-manager.io/cluster-issuer: "letsencrypt"
+#    cert-manager.io/acme-challenge-type: http01
+#    kubernetes.io/tls-acme: 'true'
   labels:
     app: ingress
 spec:
-  ingressClassName: nginx
-  tls:
-  - hosts:
-    - khteh.github.io
-    secretName: tls-secret
+  ingressClassName: public
+#  tls:
+#  - hosts:
+#    - khteh.io
+#    secretName: tls-secret
   rules:  
-  - host: khteh.github.io
+  - host:
     http: 
       paths:
       - pathType: Prefix
         path: /aspnetcorewebapi(/|$)(.*)
-#        path: /aspnetcorewebapi
         backend:
           service:
             name: svc-aspnetcorewebapi
