--- a/svc-metallb.yml
+++ b/svc-metallb.yml
@@ -15,8 +15,8 @@ spec:
     - name: http
       protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: http
     - name: https
       protocol: TCP
       port: 443
-      targetPort: 443
+      targetPort: https
