--- a/ingress.yml
+++ b/ingress.yml
@@ -37,6 +37,16 @@ spec:
             name: svc-aspnetcorewebapi
             port:
               number: 443
+  - host:
+    http: 
+      paths:
+      - pathType: Prefix
+        path: /gorestapi(/|$)(.*)
+        backend:
+          service:
+            name: svc-gorestapi
+            port:
+              number: 443
 #  - host:
 #    http: 
 #      paths:
