--- a/postgresql-secret.yml
+++ b/postgresql-secret.yml
@@ -6,3 +6,6 @@ type: Opaque
 data:
   postgresql-user: Z3Vlc3Q=
   postgresql-password: UCpzc3cwcmQ=
+  superUser: cG9zdGdyZXMK
+  superUserPassword: UCpzc3cwcmQ=
+  replicationUserPassword: UCpzc3cwcmQ=
