--- a/ingress.yml
+++ b/ingress.yml
@@ -8,6 +8,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 #    nginx.ingress.kubernetes.io/app-root: /
 #    nginx.ingress.kubernetes.io/affinity: "cookie"
 #    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-cookie"
