--- a/nodejsrestapi_config.yml
+++ b/nodejsrestapi_config.yml
@@ -5,7 +5,7 @@ metadata:
 data:
   default.json: |
     {
-        "DBHost": "svc-mysql",
-        "Port": "3306",
+        "DBHost": "svc-psotgresql",
+        "Port": "5432",
         "Database" : "school"
     }
