--- a/postgresql-initdb.yml
+++ b/postgresql-initdb.yml
@@ -6,11 +6,10 @@ metadata:
 data:
   a-init-user-db.sh: "#!/bin/bash\nset -e\npsql -v ON_ERROR_STOP=1 --username \"$POSTGRES_USER\"
     --dbname \"$POSTGRES_DB\" <<-EOSQL\n\tCREATE USER \"$POSTGRESQL_USER\" WITH PASSWORD
-    '$POSTGRESQL_PASSWORD';\n\tCREATE DATABASE \"$POSTGRES_DB_1\";\n\tCREATE DATABASE
-    \"$POSTGRES_DB_2\";\n\tCREATE DATABASE \"$POSTGRES_DB_3\";\n\tGRANT ALL PRIVILEGES
-    ON DATABASE \"$POSTGRES_DB_1\" TO \"$POSTGRESQL_USER\";\n\tGRANT ALL PRIVILEGES
-    ON DATABASE \"$POSTGRES_DB_2\" TO \"$POSTGRESQL_USER\";\n\tGRANT ALL PRIVILEGES
-    ON DATABASE \"$POSTGRES_DB_3\" TO \"$POSTGRESQL_USER\";\nEOSQL\n"
+    '$POSTGRESQL_PASSWORD';\n\tGRANT ALL PRIVILEGES ON DATABASE \"$POSTGRES_DB_1\"
+    TO \"$POSTGRESQL_USER\";\n\tGRANT ALL PRIVILEGES ON DATABASE \"$POSTGRES_DB_2\"
+    TO \"$POSTGRESQL_USER\";\n\tGRANT ALL PRIVILEGES ON DATABASE \"$POSTGRES_DB_3\"
+    TO \"$POSTGRESQL_USER\";\nEOSQL\n"
   AspNetCoreWebApi.sql: "--\n-- PostgreSQL database dump\n--\n\n-- Dumped from database
     version 14.5 (Debian 14.5-1.pgdg110+1)\n-- Dumped by pg_dump version 14.5 (Ubuntu
     14.5-0ubuntu0.22.04.1)\n\n-- Started on 2022-09-21 09:23:38 +08\n\\c AspNetCoreWebApi\nSET
@@ -240,8 +239,13 @@ data:
     REFERENCES public.\"Users\"(\"Id\") ON DELETE CASCADE;\n\n\n-- Completed on 2022-09-21
     09:23:38 +08\n\n--\n-- PostgreSQL database dump complete\n--\n\n"
   library.sql: |+
+    --
+    -- PostgreSQL database dump
+    --
+
     -- Dumped from database version 14.5 (Debian 14.5-1.pgdg110+1)
     -- Dumped by pg_dump version 14.5 (Debian 14.5-1.pgdg110+1)
+
     SET statement_timeout = 0;
     SET lock_timeout = 0;
     SET idle_in_transaction_session_timeout = 0;
@@ -252,18 +256,26 @@ data:
     SET xmloption = content;
     SET client_min_messages = warning;
     SET row_security = off;
+
     SET default_tablespace = '';
+
     SET default_table_access_method = heap;
+
     --
     -- Name: alembic_version; Type: TABLE; Schema: public; Owner: guest
     --
+
     CREATE TABLE public.alembic_version (
         version_num character varying(32) NOT NULL
     );
+
+
     ALTER TABLE public.alembic_version OWNER TO guest;
+
     --
     -- Name: authors; Type: TABLE; Schema: public; Owner: guest
     --
+
     CREATE TABLE public.authors (
         id integer NOT NULL,
         firstname character varying(128) NOT NULL,
@@ -273,10 +285,14 @@ data:
         created_at timestamp with time zone,
         modified_at timestamp with time zone
     );
+
+
     ALTER TABLE public.authors OWNER TO guest;
+
     --
     -- Name: authors_id_seq; Type: SEQUENCE; Schema: public; Owner: guest
     --
+
     CREATE SEQUENCE public.authors_id_seq
         AS integer
         START WITH 1
@@ -284,14 +300,21 @@ data:
         NO MINVALUE
         NO MAXVALUE
         CACHE 1;
+
+
     ALTER TABLE public.authors_id_seq OWNER TO guest;
+
     --
     -- Name: authors_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: guest
     --
+
     ALTER SEQUENCE public.authors_id_seq OWNED BY public.authors.id;
+
+
     --
     -- Name: books; Type: TABLE; Schema: public; Owner: guest
     --
+
     CREATE TABLE public.books (
         id integer NOT NULL,
         title character varying(128) NOT NULL,
@@ -301,10 +324,14 @@ data:
         modified_at timestamp with time zone,
         author_id integer NOT NULL
     );
+
+
     ALTER TABLE public.books OWNER TO guest;
+
     --
     -- Name: books_id_seq; Type: SEQUENCE; Schema: public; Owner: guest
     --
+
     CREATE SEQUENCE public.books_id_seq
         AS integer
         START WITH 1
@@ -312,14 +339,21 @@ data:
         NO MINVALUE
         NO MAXVALUE
         CACHE 1;
+
+
     ALTER TABLE public.books_id_seq OWNER TO guest;
+
     --
     -- Name: books_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: guest
     --
+
     ALTER SEQUENCE public.books_id_seq OWNED BY public.books.id;
+
+
     --
     -- Name: users; Type: TABLE; Schema: public; Owner: guest
     --
+
     CREATE TABLE public.users (
         id integer NOT NULL,
         firstname character varying(128) NOT NULL,
@@ -331,10 +365,14 @@ data:
         created_at timestamp with time zone,
         modified_at timestamp with time zone
     );
+
+
     ALTER TABLE public.users OWNER TO guest;
+
     --
     -- Name: users_id_seq; Type: SEQUENCE; Schema: public; Owner: guest
     --
+
     CREATE SEQUENCE public.users_id_seq
         AS integer
         START WITH 1
@@ -342,94 +380,445 @@ data:
         NO MINVALUE
         NO MAXVALUE
         CACHE 1;
+
+
     ALTER TABLE public.users_id_seq OWNER TO guest;
+
     --
     -- Name: users_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: guest
     --
+
     ALTER SEQUENCE public.users_id_seq OWNED BY public.users.id;
+
+
     --
     -- Name: authors id; Type: DEFAULT; Schema: public; Owner: guest
     --
+
     ALTER TABLE ONLY public.authors ALTER COLUMN id SET DEFAULT nextval('public.authors_id_seq'::regclass);
+
+
     --
     -- Name: books id; Type: DEFAULT; Schema: public; Owner: guest
     --
+
     ALTER TABLE ONLY public.books ALTER COLUMN id SET DEFAULT nextval('public.books_id_seq'::regclass);
+
+
     --
     -- Name: users id; Type: DEFAULT; Schema: public; Owner: guest
     --
+
     ALTER TABLE ONLY public.users ALTER COLUMN id SET DEFAULT nextval('public.users_id_seq'::regclass);
+
+
     --
     -- Data for Name: alembic_version; Type: TABLE DATA; Schema: public; Owner: guest
     --
+
     COPY public.alembic_version (version_num) FROM stdin;
-    d89f5361cd17
+    a4691bb6ae7d
     \.
+
+
     --
     -- Data for Name: authors; Type: TABLE DATA; Schema: public; Owner: guest
     --
+
     COPY public.authors (id, firstname, lastname, email, phone, created_at, modified_at) FROM stdin;
     \.
+
+
     --
     -- Data for Name: books; Type: TABLE DATA; Schema: public; Owner: guest
     --
+
     COPY public.books (id, title, isbn, page_count, created_at, modified_at, author_id) FROM stdin;
     \.
+
+
     --
     -- Data for Name: users; Type: TABLE DATA; Schema: public; Owner: guest
     --
+
     COPY public.users (id, firstname, lastname, email, phone, password, lastlogin, created_at, modified_at) FROM stdin;
     \.
+
+
     --
     -- Name: authors_id_seq; Type: SEQUENCE SET; Schema: public; Owner: guest
     --
+
     SELECT pg_catalog.setval('public.authors_id_seq', 1, false);
+
+
     --
     -- Name: books_id_seq; Type: SEQUENCE SET; Schema: public; Owner: guest
     --
+
     SELECT pg_catalog.setval('public.books_id_seq', 1, false);
+
+
     --
     -- Name: users_id_seq; Type: SEQUENCE SET; Schema: public; Owner: guest
     --
+
     SELECT pg_catalog.setval('public.users_id_seq', 1, false);
+
+
     --
     -- Name: alembic_version alembic_version_pkc; Type: CONSTRAINT; Schema: public; Owner: guest
     --
+
     ALTER TABLE ONLY public.alembic_version
         ADD CONSTRAINT alembic_version_pkc PRIMARY KEY (version_num);
+
+
     --
     -- Name: authors authors_pkey; Type: CONSTRAINT; Schema: public; Owner: guest
     --
+
     ALTER TABLE ONLY public.authors
         ADD CONSTRAINT authors_pkey PRIMARY KEY (id);
+
+
     --
     -- Name: books books_pkey; Type: CONSTRAINT; Schema: public; Owner: guest
     --
+
     ALTER TABLE ONLY public.books
         ADD CONSTRAINT books_pkey PRIMARY KEY (id);
+
+
     --
     -- Name: users users_pkey; Type: CONSTRAINT; Schema: public; Owner: guest
     --
+
     ALTER TABLE ONLY public.users
         ADD CONSTRAINT users_pkey PRIMARY KEY (id);
+
+
     --
     -- Name: ix_authors_email; Type: INDEX; Schema: public; Owner: guest
     --
+
     CREATE UNIQUE INDEX ix_authors_email ON public.authors USING btree (email);
+
+
     --
     -- Name: ix_authors_phone; Type: INDEX; Schema: public; Owner: guest
     --
+
     CREATE UNIQUE INDEX ix_authors_phone ON public.authors USING btree (phone);
+
+
     --
     -- Name: ix_users_email; Type: INDEX; Schema: public; Owner: guest
     --
+
     CREATE UNIQUE INDEX ix_users_email ON public.users USING btree (email);
+
+
     --
     -- Name: ix_users_phone; Type: INDEX; Schema: public; Owner: guest
     --
+
     CREATE UNIQUE INDEX ix_users_phone ON public.users USING btree (phone);
+
+
     --
     -- Name: books books_author_id_fkey; Type: FK CONSTRAINT; Schema: public; Owner: guest
     --
+
     ALTER TABLE ONLY public.books
         ADD CONSTRAINT books_author_id_fkey FOREIGN KEY (author_id) REFERENCES public.authors(id);
+  school.sql: |+
+    --
+    -- PostgreSQL database dump
+    --
+
+    -- Dumped from database version 14.5 (Debian 14.5-1.pgdg110+1)
+    -- Dumped by pg_dump version 14.5 (Debian 14.5-1.pgdg110+1)
+
+    SET statement_timeout = 0;
+    SET lock_timeout = 0;
+    SET idle_in_transaction_session_timeout = 0;
+    SET client_encoding = 'UTF8';
+    SET standard_conforming_strings = on;
+    SELECT pg_catalog.set_config('search_path', '', false);
+    SET check_function_bodies = false;
+    SET xmloption = content;
+    SET client_min_messages = warning;
+    SET row_security = off;
+
+    SET default_tablespace = '';
+
+    SET default_table_access_method = heap;
+
+    --
+    -- Name: student; Type: TABLE; Schema: public; Owner: guest
+    --
+
+    CREATE TABLE public.student (
+        id integer NOT NULL,
+        created timestamp without time zone NOT NULL,
+        modified timestamp without time zone NOT NULL,
+        "firstName" character varying(256) NOT NULL,
+        "lastName" character varying(256) NOT NULL,
+        email character varying(256) NOT NULL,
+        "isSuspended" boolean NOT NULL
+    );
+
+
+    ALTER TABLE public.student OWNER TO guest;
+
+    --
+    -- Name: student_id_seq; Type: SEQUENCE; Schema: public; Owner: guest
+    --
+
+    CREATE SEQUENCE public.student_id_seq
+        AS integer
+        START WITH 1
+        INCREMENT BY 1
+        NO MINVALUE
+        NO MAXVALUE
+        CACHE 1;
+
+
+    ALTER TABLE public.student_id_seq OWNER TO guest;
+
+    --
+    -- Name: student_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: guest
+    --
+
+    ALTER SEQUENCE public.student_id_seq OWNED BY public.student.id;
+
+
+    --
+    -- Name: student_teachers_teacher; Type: TABLE; Schema: public; Owner: guest
+    --
+
+    CREATE TABLE public.student_teachers_teacher (
+        "studentId" integer NOT NULL,
+        "teacherId" integer NOT NULL
+    );
+
+
+    ALTER TABLE public.student_teachers_teacher OWNER TO guest;
+
+    --
+    -- Name: teacher; Type: TABLE; Schema: public; Owner: guest
+    --
+
+    CREATE TABLE public.teacher (
+        id integer NOT NULL,
+        created timestamp without time zone NOT NULL,
+        modified timestamp without time zone NOT NULL,
+        "firstName" character varying(256) NOT NULL,
+        "lastName" character varying(256) NOT NULL,
+        email character varying(256) NOT NULL
+    );
+
+
+    ALTER TABLE public.teacher OWNER TO guest;
+
+    --
+    -- Name: teacher_id_seq; Type: SEQUENCE; Schema: public; Owner: guest
+    --
+
+    CREATE SEQUENCE public.teacher_id_seq
+        AS integer
+        START WITH 1
+        INCREMENT BY 1
+        NO MINVALUE
+        NO MAXVALUE
+        CACHE 1;
+
+
+    ALTER TABLE public.teacher_id_seq OWNER TO guest;
+
+    --
+    -- Name: teacher_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: guest
+    --
+
+    ALTER SEQUENCE public.teacher_id_seq OWNED BY public.teacher.id;
+
+
+    --
+    -- Name: teacher_students_student; Type: TABLE; Schema: public; Owner: guest
+    --
+
+    CREATE TABLE public.teacher_students_student (
+        "teacherId" integer NOT NULL,
+        "studentId" integer NOT NULL
+    );
+
+
+    ALTER TABLE public.teacher_students_student OWNER TO guest;
+
+    --
+    -- Name: student id; Type: DEFAULT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.student ALTER COLUMN id SET DEFAULT nextval('public.student_id_seq'::regclass);
+
+
+    --
+    -- Name: teacher id; Type: DEFAULT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.teacher ALTER COLUMN id SET DEFAULT nextval('public.teacher_id_seq'::regclass);
+
+
+    --
+    -- Data for Name: student; Type: TABLE DATA; Schema: public; Owner: guest
+    --
+
+    COPY public.student (id, created, modified, "firstName", "lastName", email, "isSuspended") FROM stdin;
+    \.
+
+
+    --
+    -- Data for Name: student_teachers_teacher; Type: TABLE DATA; Schema: public; Owner: guest
+    --
+
+    COPY public.student_teachers_teacher ("studentId", "teacherId") FROM stdin;
+    \.
+
+
+    --
+    -- Data for Name: teacher; Type: TABLE DATA; Schema: public; Owner: guest
+    --
+
+    COPY public.teacher (id, created, modified, "firstName", "lastName", email) FROM stdin;
+    \.
+
+
+    --
+    -- Data for Name: teacher_students_student; Type: TABLE DATA; Schema: public; Owner: guest
+    --
+
+    COPY public.teacher_students_student ("teacherId", "studentId") FROM stdin;
+    \.
+
+
+    --
+    -- Name: student_id_seq; Type: SEQUENCE SET; Schema: public; Owner: guest
+    --
+
+    SELECT pg_catalog.setval('public.student_id_seq', 1, false);
+
+
+    --
+    -- Name: teacher_id_seq; Type: SEQUENCE SET; Schema: public; Owner: guest
+    --
+
+    SELECT pg_catalog.setval('public.teacher_id_seq', 1, false);
+
+
+    --
+    -- Name: teacher_students_student PK_0d36515ebf3797c63a3d65fd11e; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.teacher_students_student
+        ADD CONSTRAINT "PK_0d36515ebf3797c63a3d65fd11e" PRIMARY KEY ("teacherId", "studentId");
+
+
+    --
+    -- Name: teacher PK_2f807294148612a9751dacf1026; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.teacher
+        ADD CONSTRAINT "PK_2f807294148612a9751dacf1026" PRIMARY KEY (id);
+
+
+    --
+    -- Name: student PK_3d8016e1cb58429474a3c041904; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.student
+        ADD CONSTRAINT "PK_3d8016e1cb58429474a3c041904" PRIMARY KEY (id);
+
+
+    --
+    -- Name: student_teachers_teacher PK_ec87c1e05d0d8cefa233575cfe1; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.student_teachers_teacher
+        ADD CONSTRAINT "PK_ec87c1e05d0d8cefa233575cfe1" PRIMARY KEY ("studentId", "teacherId");
+
+
+    --
+    -- Name: teacher UQ_00634394dce7677d531749ed8e8; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.teacher
+        ADD CONSTRAINT "UQ_00634394dce7677d531749ed8e8" UNIQUE (email);
+
+
+    --
+    -- Name: student UQ_a56c051c91dbe1068ad683f536e; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.student
+        ADD CONSTRAINT "UQ_a56c051c91dbe1068ad683f536e" UNIQUE (email);
+
+
+    --
+    -- Name: IDX_099234f0e507f8d97fbcacd14b; Type: INDEX; Schema: public; Owner: guest
+    --
+
+    CREATE INDEX "IDX_099234f0e507f8d97fbcacd14b" ON public.teacher_students_student USING btree ("teacherId");
+
+
+    --
+    -- Name: IDX_46cf5ac1712979a26645705a0f; Type: INDEX; Schema: public; Owner: guest
+    --
+
+    CREATE INDEX "IDX_46cf5ac1712979a26645705a0f" ON public.teacher_students_student USING btree ("studentId");
+
+
+    --
+    -- Name: IDX_b0ef0f5f4afbbdcd6984f41465; Type: INDEX; Schema: public; Owner: guest
+    --
+
+    CREATE INDEX "IDX_b0ef0f5f4afbbdcd6984f41465" ON public.student_teachers_teacher USING btree ("studentId");
+
+
+    --
+    -- Name: IDX_bbce22585af3071bbe4f355a12; Type: INDEX; Schema: public; Owner: guest
+    --
+
+    CREATE INDEX "IDX_bbce22585af3071bbe4f355a12" ON public.student_teachers_teacher USING btree ("teacherId");
+
+
+    --
+    -- Name: teacher_students_student FK_099234f0e507f8d97fbcacd14b3; Type: FK CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.teacher_students_student
+        ADD CONSTRAINT "FK_099234f0e507f8d97fbcacd14b3" FOREIGN KEY ("teacherId") REFERENCES public.teacher(id) ON UPDATE CASCADE ON DELETE CASCADE;
+
+
+    --
+    -- Name: teacher_students_student FK_46cf5ac1712979a26645705a0f1; Type: FK CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.teacher_students_student
+        ADD CONSTRAINT "FK_46cf5ac1712979a26645705a0f1" FOREIGN KEY ("studentId") REFERENCES public.student(id);
+
+
+    --
+    -- Name: student_teachers_teacher FK_b0ef0f5f4afbbdcd6984f414650; Type: FK CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.student_teachers_teacher
+        ADD CONSTRAINT "FK_b0ef0f5f4afbbdcd6984f414650" FOREIGN KEY ("studentId") REFERENCES public.student(id) ON UPDATE CASCADE ON DELETE CASCADE;
+
+
+    --
+    -- Name: student_teachers_teacher FK_bbce22585af3071bbe4f355a12b; Type: FK CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.student_teachers_teacher
+        ADD CONSTRAINT "FK_bbce22585af3071bbe4f355a12b" FOREIGN KEY ("teacherId") REFERENCES public.teacher(id);
