--- a/role_binding.yml
+++ b/role_binding.yml
@@ -4,7 +4,7 @@ metadata:
   name: my-role-binding
   namespace: default
 roleRef:
-  apiGroup: rbac.authorization.k8s.io
+  apiGroup: ""
   kind: Role
   name: myrole
 subjects:
