--- a/role.yml
+++ b/role.yml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: myrole
+  name: superuser
   namespace: default
 rules:
   - apiGroups:
