--- a/aws-ecr-cron.yml
+++ b/aws-ecr-cron.yml
@@ -5,7 +5,7 @@ metadata:
   name: ecr-cred-helper
   namespace: default
 spec:
-  schedule: "* * * * *"
+  schedule: 0 * * * *
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 1
   suspend: false
