--- a/postgresql-secret.yml
+++ b/postgresql-secret.yml
@@ -5,6 +5,6 @@ metadata:
 type: Opaque
 data:
   postgresql-user: Z3Vlc3Q=
-  postgresql-password: UCpzc3cwcmQ=
-  superUserPassword: UCpzc3cwcmQ=
-  replicationUserPassword: UCpzc3cwcmQ=
+  postgresql-password: UEAkJHcwcmQ=
+  superUserPassword: UEAkJHcwcmQ=
+  replicationUserPassword: UEAkJHcwcmQ=
