--- a/aspnetcorewebapi.yml
+++ b/aspnetcorewebapi.yml
@@ -89,7 +89,7 @@ spec:
           failureThreshold: 3
           successThreshold: 1
         volumeMounts:
-        - name: mysql-connection
+        - name: postgresql-connection
           mountPath: /app/appsettings.postgresql.json
           subPath: appsettings.postgresql.json
           readOnly: true
@@ -118,7 +118,7 @@ spec:
             cpu: 250m
             memory: 1024Mi
       volumes:
-      - name: mysql-connection
+      - name: postgresql-connection
         secret:
           secretName: aspnetcorewebapi
           items:
