--- a/role_binding.yml
+++ b/role_binding.yml
@@ -1,13 +1,15 @@
-apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: admin-role-binding
-  namespace: default
-roleRef:
-  apiGroup: ""
-  kind: Role
-  name: admin
+  name: admins
 subjects:
-  - kind: ServiceAccount
-    namespace: default
-    name: default
+  - kind: Group
+    name: MyCompany
+    apiGroup: rbac.authorization.k8s.io
+  - kind: Group
+    name: admin
+    apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: admin
+  apiGroup: rbac.authorization.k8s.io
